added some zoom and panning to the drawable on gardenpage...

--- a/GardenApp/GardenPage.xaml
+++ b/GardenApp/GardenPage.xaml
@@ -33,6 +33,10 @@
                 WidthRequest="255"
                 x:Name="GardenMap"
                 >
+                <GraphicsView.GestureRecognizers>
+                    <PinchGestureRecognizer PinchUpdated="OnPinchUpdated"/>
+                    <PanGestureRecognizer PanUpdated="OnPanUpdated" />
+                </GraphicsView.GestureRecognizers>
             
             </GraphicsView>
         </Frame>
