--- a/GardenApp/AreaPage.xaml
+++ b/GardenApp/AreaPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid
         ColumnDefinitions="0.2*, 0.4*, 0.2*, 0.2*"
-        RowDefinitions="0.05*, 0.55*, 0.05*, 0.05*, 0.05*, 0.05*, 0.1*, 0.1* "
+        RowDefinitions="0.05*, 0.55*, 0.05*, 0.07*, 0.07*, 0.07*, 0.04*, 0.1* "
         Padding="3">
         
         <Label
@@ -22,17 +22,19 @@
             Grid.Column="2"
             Grid.ColumnSpan="2"
             Grid.Row="0"
-            Text="current zoom will go here somehow, and calculation of what 10px means in it"
+            Text="placeholder for something useful maybe"
             />
 
         <GraphicsView
             Grid.Row="1"
             Grid.ColumnSpan="2"
-            
             Drawable="{Binding GardenDrawable}"
-
             x:Name="GardenMap"
             >
+            <GraphicsView.GestureRecognizers>
+                <PinchGestureRecognizer PinchUpdated="OnPinchUpdated"/>
+                <PanGestureRecognizer PanUpdated="OnPanUpdated"/>
+            </GraphicsView.GestureRecognizers>
             
         </GraphicsView>
 
@@ -46,7 +48,7 @@
             SelectionChangedCommand="{Binding SelectLocationCommand}"
             SelectionChangedCommandParameter="{Binding SelectedItem, Source={x:Reference LocationCollection}}"
             >
-
+          
 
             <CollectionView.ItemTemplate>
                 <DataTemplate
@@ -61,7 +63,7 @@
                             Padding="0"
                             Margin="0"
                             RowDefinitions="20, 20, 20, 50"
-                            ColumnDefinitions="0.1*, 0.2*, 0.2*, 0.2*, 0.2*, 0.1*"
+                            ColumnDefinitions="0.2*, 0.1*, 0.2*, 0.2*, 0.1*, 0.2*"
                             ColumnSpacing="0.5"
                             >
                             <Label
@@ -84,6 +86,16 @@
                                 Grid.Column="2"
                                 Grid.ColumnSpan="4"
                                 Text="{Binding Longitude}"/>
+
+                            <Button 
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type vm:AreaVM}}, Path=SelectLocationCommand}"
+                                CommandParameter="{Binding .}"
+                                Grid.Row="3"
+                                Grid.Column="0"
+                                Padding="0"
+                                BackgroundColor="ForestGreen"
+                                Text="[ ]"
+                                />
 
 
                             <Button
@@ -135,7 +147,7 @@
         </CollectionView>
 
         <Label
-            Text="Selected location"
+            Text="Slctd loc"
             Grid.Column="0"
             Grid.Row="2"
             />
@@ -195,21 +207,29 @@
                 >
                 
                 <Button
+                    Command="{Binding ShiftLocationNorthCommand}"
+                    CommandParameter="{Binding SelectedLocation}"
                     Grid.Row="0"
                     Grid.Column="1"
                     Text="Λ"
                     />
                 <Button
+                    Command="{Binding ShiftLocationSouthCommand}"
+                    CommandParameter="{Binding SelectedLocation}"
                     Grid.Row="2"
                     Grid.Column="1"
                     Text="V"
                     />
                 <Button
+                    Command="{Binding ShiftLocationWestCommand}"
+                    CommandParameter="{Binding SelectedLocation}"
                     Grid.Row="1"
                     Grid.Column="0"
                     Text="&lt;"
                     />
                 <Button
+                    Command="{Binding ShiftLocationEastCommand}"
+                    CommandParameter="{Binding SelectedLocation}"
                     Grid.Row="1"
                     Grid.Column="2"
                     Text="&gt;"
